# async_hackathon

./: README.md  pyproject.toml
.devcontainer/: devcontainer.json
challenges/1_concepts/: gather.py  main.py  readme.md
challenges/2_promises_futures/: futur.py  main.py  readme.md
challenges/3_contextvars/: context_vars.py  main.py  readme.md
challenges/4_generators/: challenge_1.py  challenge_2.py  challenge_3.py  challenge_4.py  challenge_5.py  my_generator.py  readme.md
challenges/5_logging_and_monitoring/: log_messages.py  main.py  monitoring.py  readme.md
challenges/6_testing_debugging/: pytest.ini  readme.md  test_gen.py
challenges/7_rest_api/: README.md
challenges/7_rest_api/realworld_app/fastapi-realworld-example-app/: docker-compose.yml
challenges/7_rest_api/realworld_app/fastapi-realworld-example-app/app/core/settings/: base.py  test.py
challenges/7_rest_api/realworld_app/fastapi-realworld-example-app/scripts/: create_db.py
challenges/contextvars/: readme.md
challenges/debugging_logging/: readme.md
challenges/debugging_testing/: readme.md
challenges/generators/: readme.md
challenges/lamport_clocks/: readme.md
challenges/logging/: readme.md
challenges/promises_futures/: readme.md
challenges/testing/: readme.md
learning/: generators.py
